Adicionei o texto basico do html e css

--- a/index.html
+++ b/index.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+<html lang="pt-br">
+    <head>
+        <meta charset="UTF-8">
+        <title>Sistema Acadêmico</title>
+        <link href="images/1200px-Instituto_Federal_de_Mato_Grosso_do_Sul_-_Marca_Vertical_2015 1.svg" type="image/x-icon" rel="icon">
+    </head>
+    <body>
+        <header>
+            <h1>Sistema Acadêmico</h1>
+        </header>
+        <hr>
+        <ul>
+            <li><a href="hobbies.html">Hobbies</a></li>
+            <li><a href="disciplinas.html">Disciplinas</a></li>
+            <li><a href="notas.html">Notas</a></li>
+            <li><a href="biblioteca.html">Biblioteca</a></li>
+            <li><a href="boletim.html">Boletim</a></li>
+        </ul>
+        <hr>
+
+
+        <footer>
+            &copy;Todos os direitos reservados;
+        </footer>
+    </body>
 </html>
