--- a/index.html
+++ b/index.html
@@ -3,25 +3,45 @@
     <head>
         <meta charset="UTF-8">
         <title>Sistema Acadêmico</title>
-        <link href="images/1200px-Instituto_Federal_de_Mato_Grosso_do_Sul_-_Marca_Vertical_2015 1.svg" type="image/x-icon" rel="icon">
+        <link href="images/iconIF.svg" type="image/x-icon" rel="icon">
     </head>
     <body>
         <header>
             <h1>Sistema Acadêmico</h1>
         </header>
         <hr>
-        <ul>
-            <li><a href="hobbies.html">Hobbies</a></li>
-            <li><a href="disciplinas.html">Disciplinas</a></li>
-            <li><a href="notas.html">Notas</a></li>
-            <li><a href="biblioteca.html">Biblioteca</a></li>
-            <li><a href="boletim.html">Boletim</a></li>
-        </ul>
+        <nav>
+            <ul>
+                <li><a href="hobbies.html">Hobbies</a></li>
+                <li><a href="disciplinas.html">Disciplinas</a></li>
+                <li><a href="notas.html">Notas</a></li>
+                <li><a href="biblioteca.html">Biblioteca</a></li>
+                <li><a href="boletim.html">Boletim</a></li>
+            </ul>
+        </nav>
         <hr>
 
-
+        <main>
+            <h1>Olá, Camila</h1>
+            <p>Prezado(a) estudante,<br>A partir de agora você passará a ter acesso aos seus dados no Sistema Acadêmico do IFMS.</p>
+            <p>Essa é a segunda de várias etapas que virão. A primeira foi o acesso ao boletim, agora, nesta fase você poderá consultar em tempo real quais as unidades que está matriculado no semestre, ver horários de aula e permanência, bem como acessa notas e faltas, além do boletim.</p>
+            <p>Se você está fazendo mais de um curso no IFMS poderá alternar entre suas diferentes matrículas no canto superior esquerdo da tela, abaixo do texto "Sistema Acadêmico".</p>
+            <p>No menu "<a href="disciplinas.html">Disciplinas</a>" você verá a relação de todas as unidades que está matriculado no semestre atual. Clicando sobre o nome de cada uma, você verá os horários de permanência do(a) professor(a) e os horários locais de aula.</p>
+            <p>No menu "<a href="notas.html">Notas</a>" você conseguirá visualizar todas as notas já lançadas, tanto das unidades atuais quanto daquelas de semestres anteriores e a quantidade de faltas em cada uma delas.</p>
+            <p>Já no menu "<a href="boletim.html">Boletim</a>" você e conseguirá verificar, além de sua nota, o número de faltas e o percentual que elas representam. Lembre-se deve ter pelo menos 75% de frequência.</p>
+            <p>Em um futuro próximo, novas funcionalidade serão disponibilizadas na Área do Estudante, como solicitação de rematrícula, acesso ao plano de ensino do professor, à matriz curricular do curso, gerar atestado de matrícula, acesso ao histórico escolar, entre outras.</p>
+            <p>Fique à vontade para dar sugestões para melhoria desse espaço.</p>
+            <p>Aproveitem!</p>
+            <p>Pró-Reitoria de Ensino e Reitoria</p>
+        </main>
+        <hr>
+        <h1><strong>Últimas notícias</strong></h1>
+        <div>
+            <p>Aberto processo seletivo</p>
+        </div>
+        <hr>
         <footer>
-            &copy;Todos os direitos reservados;
+            <p>&copy;Todos os direitos reservados;</p>
         </footer>
     </body>
 </html>
