--- a/notas.html
+++ b/notas.html
@@ -3,21 +3,22 @@
     <head>
         <meta charset="UTF-8">
         <title>Document</title>
-        <link href="images/1200px-Instituto_Federal_de_Mato_Grosso_do_Sul_-_Marca_Vertical_2015 1.svg" type="image/x-icon" rel="icon">
-
+        <link href="images/iconIF.svg" type="image/x-icon" rel="icon">
     </head>
     <body>
         <header>
             <h1>Sistema Acadêmico</h1>
         </header>
         <hr>
-        <ul>
-            <li><a href="hobbies.html">Hobbies</a></li>
-            <li><a href="disciplinas.html">Disciplinas</a></li>
-            <li><a href="notas.html">Notas</a></li>
-            <li><a href="biblioteca.html">Biblioteca</a></li>
-            <li><a href="boletim.html">Boletim</a></li>
-        </ul>
+        <nav>
+            <ul>
+                <li><a href="hobbies.html">Hobbies</a></li>
+                <li><a href="disciplinas.html">Disciplinas</a></li>
+                <li><a href="notas.html">Notas</a></li>
+                <li><a href="biblioteca.html">Biblioteca</a></li>
+                <li><a href="boletim.html">Boletim</a></li>
+            </ul>
+        </nav>
         <hr>
 
 
