Finalizacao do botao e da pagina index

--- a/hobbies.html
+++ b/hobbies.html
@@ -36,7 +36,14 @@
             <p>Todas que são técnicas.</p>
         </div>
     </div>
-    <a id="instagram" href="https://instagram.com/caiolutzhonda" target="_blank"><img id="imagem-instagram" src="images/logo-instagram-png-fundo-transparente2.png" alt="Logo do instagram"></a>
 
+    <div class="centralizacao-imagem">
+        <a id="instagram" href="https://instagram.com/caiolutzhonda" target="_blank"><img id="imagem-instagram" src="images/logo-instagram-png-fundo-transparente2.png" alt="Logo do instagram"></a>
+    </div>
+    
+    <footer class="centralizacao-botao">
+        <button><a href="index.html">Voltar</a></button>
+    </footer>
+    
 </body>
 </html>
