--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <p>Pró-Reitoria de Ensino e Reitoria</p>
         </main>
         <hr>
-        <h1><strong>Últimas notícias</strong></h1>
+        <h1>Últimas notícias</h1>
         <div>
             <p>Aberto processo seletivo</p>
         </div>
