Todas as paginas criadas e editadas a proxima etapa deve ser corrigir erros e fazer as devias keywords para as paginas

--- a/html/disciplinas.html
+++ b/html/disciplinas.html
@@ -2,12 +2,12 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8">
-        <title>Document</title>
-        <link href="images/iconIF.svg" type="image/x-icon" rel="icon">
+        <title>Disciplinas - Sistema Acadêmico</title>
+        <link href="../images/iconIF.svg" type="image/x-icon" rel="icon">
     </head>
     <body>
         <header>
-            <h1>Sistema Acadêmico</h1>
+            <h1>Sistema Acadêmico - Disciplinas</h1>
         </header>
         <hr>
         <nav>
@@ -20,10 +20,18 @@
             </ul>
         </nav>
         <hr>
-
-
+        <main>
+            <h1>Disciplinas</h1>
+            <ol>
+                <li>Período</li>
+                <li>Período</li>
+                <li>Período</li>
+            </ol>
+        </main>
         <footer>
-            &copy;Todos os direitos reservados;
+            <button><a href="../index.html">Voltar</a></button>
+            <br>
+            <p>&copy;Todos os direitos reservados;</p>
         </footer>
     </body>
 </html>
