--- a/html/hobbies.html
+++ b/html/hobbies.html
@@ -6,12 +6,12 @@
     <meta name="Description" content="Uma página contando sobre mim, hobbies e afins">
     <meta name="keywords" content="HTML, hobbies, ifano, tecnologia, sobre mim">
     <title>Hobbies</title>
-    <link href="css/hobbies.css" rel="stylesheet">
+    <link href="../css/hobbies.css" rel="stylesheet">
 
 </head>
 <body>
     <div id="imagem">
-        <img src="images/cat-computer.gif" alt="Gato apertando teclas no computador">
+        <img src="../images/cat-computer.gif" alt="Gato apertando teclas no computador">
     </div>
     <div class="wrapper-texto">
         <div id="texto">
@@ -38,11 +38,11 @@
     </div>
 
     <div class="centralizacao-imagem">
-        <a id="instagram" href="https://instagram.com/caiolutzhonda" target="_blank"><img id="imagem-instagram" src="images/logo-instagram-png-fundo-transparente2.png" alt="Logo do instagram"></a>
+        <a id="instagram" href="https://instagram.com/caiolutzhonda" target="_blank"><img id="imagem-instagram" src="../images/logo-instagram-png-fundo-transparente2.png" alt="Logo do instagram"></a>
     </div>
     
     <footer class="centralizacao-botao">
-        <button><a href="index.html">Voltar</a></button>
+        <button><a href="../index.html">Voltar</a></button>
     </footer>
     
 </body>
