--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <hr>
         <nav>
             <ul>
-                <li><a href="hobbies.html">Hobbies</a></li>
-                <li><a href="disciplinas.html">Disciplinas</a></li>
-                <li><a href="notas.html">Notas</a></li>
-                <li><a href="biblioteca.html">Biblioteca</a></li>
-                <li><a href="boletim.html">Boletim</a></li>
+                <li><a href="html/hobbies.html">Hobbies</a></li>
+                <li><a href="html/disciplinas.html">Disciplinas</a></li>
+                <li><a href="html/notas.html">Notas</a></li>
+                <li><a href="html/biblioteca.html">Biblioteca</a></li>
+                <li><a href="html/boletim.html">Boletim</a></li>
             </ul>
         </nav>
         <hr>
