Tudo pronto versao 1.0 lancada

--- a/html/biblioteca.html
+++ b/html/biblioteca.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8">
+        <meta name="Author" content="Caio Lutz Honda">
         <title>Biblioteca - Sistema Acadêmico</title>
         <link href="../images/iconIF.svg" type="image/x-icon" rel="icon">
     </head>
@@ -57,7 +58,7 @@
         </ul>
     </main>
     <footer>
-        <p>Caso ocorra alguma inconsistência favor procurar a Central de Relacionamentos (CEREL) do seu campus.</p>
+        <p>Caso ocorra alguma inconsistência, favor procurar a Central de Relacionamentos (CEREL) do seu campus.</p>
         <button><a href="../index.html">Voltar</a></button>
         <br>
         <p>&copy;Todos os direitos reservados;</p>
