--- a/html/boletim.html
+++ b/html/boletim.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8">
+        <meta name="Author" content="Caio Lutz Honda">
         <title>Boletim - Sistema Acadêmico</title>
         <link href="../images/iconIF.svg" type="image/x-icon" rel="icon">
     </head>
@@ -26,7 +27,7 @@
             <table>
                 <tr>
                     <th>Estudante:</th>
-                    <td>CAMILA TUMI KOIKE</td>
+                    <td>CAMILA YUMI KOIKE</td>
                     
                     <th>Matrícula:</th>
                     <td>11111111-2</td>
@@ -51,7 +52,7 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>PROEJA A<br><sup>NILSON OLIVEIRA DA SILVA</sup></td>
+                        <td>PROEJA A<br><small>NILSON OLIVEIRA DA SILVA</small></td>
                         <td>30.0h/40</td>
                         <td>5</td>
                         <td>12,5%</td>
@@ -60,7 +61,7 @@
                         <td>Aprovado por Nota</td>
                     </tr>
                     <tr>
-                        <td>Pesquisa em Educação II: Projeto de Intervenção A <br><sup>JOYCE AVILA DE OLIVEIRA</sup></td>
+                        <td>Pesquisa em Educação II: Projeto de Intervenção A <br><small>JOYCE AVILA DE OLIVEIRA</small></td>
                         <td>30.0h/40</td>
                         <td>5</td>
                         <td>12,5%</td>
@@ -69,7 +70,7 @@
                         <td>Aprovado por Nota</td>
                     </tr>
                     <tr>
-                        <td>Dimensões da Ciência e da Tecnologia no Contexto Escolar A<br><sup>GRISCELE SOUZA DE JESUS</sup></td>
+                        <td>Dimensões da Ciência e da Tecnologia no Contexto Escolar A<br><small>GRISCELE SOUZA DE JESUS</small></td>
                         <td>30.0h/40</td>
                         <td>0</td>
                         <td>0%</td>
@@ -78,7 +79,7 @@
                         <td>Aprovado por Nota</td>
                     </tr>
                     <tr>
-                        <td>LIBRAS A<br><sup>JOZIL DOS SANTOS</sup></td>
+                        <td>LIBRAS A<br><small>JOZIL DOS SANTOS</small></td>
                         <td>30.0h/40</td>
                         <td>3</td>
                         <td>7,5%</td>
@@ -88,9 +89,10 @@
                     </tr>
                 </tbody>
             </table>
+            <br>
             <div class="legenda">
-                <sup><b>Legenda:</b></sup>
-                <sup><b>CH/Aulas:</b> Carga horária da Unidade Curricular em horas/Quantidade de aulas ou encontros presenciais previstos.</sup>
+                <small><b>Legenda:</b></small>
+                <p><b>CH/Aulas:</b> Carga horária da Unidade Curricular em horas/Quantidade de aulas ou encontros presenciais previstos.</p>
                 <p>*Esses registros podem sofrer alterações até o final do período letivo.</p>
             </div>
         </main>
