--- a/html/notas.html
+++ b/html/notas.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Notas - Sistema Acadêmico</title>
+        <meta name="Author" content="Caio Lutz Honda">
         <link href="../images/iconIF.svg" type="image/x-icon" rel="icon">
     </head>
     <body>
