Barra superior feita

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
         <meta name="Author" content="Caio Lutz Honda">
         <meta name="keywords" content="Academico ifms, ifms academico, SIGA ifms, siga">
         <link href="images/iconIF.svg" type="image/x-icon" rel="icon">
+        <link rel="stylesheet" href="css/index.css">
     </head>
     <body>
         <header>
-            <h1>Sistema Acadêmico</h1>
+            <div id="top-bar"> </div>
         </header>
         <hr>
         <nav>
