adicionei o basico da top bar

--- a/index.html
+++ b/index.html
@@ -10,9 +10,15 @@
     </head>
     <body>
         <header>
-            <div id="top-bar"> </div>
+            <div id="top-bar">
+                <div class="bandeira-brasil">
+                    <ul>
+                        <li><img src="images/1200px-Flag_of_Brazil.svg.png" alt="bandeira-brasil"></li>
+                        <li><b>BRASIL</b></li>
+                    </ul>
+                </div>
+             </div>
         </header>
-        <hr>
         <nav>
             <ul>
                 <li><a href="html/hobbies.html">Hobbies</a></li>
