--- a/index.html
+++ b/index.html
@@ -10,15 +10,35 @@
     </head>
     <body>
         <header>
+          <!-- Inicio da barra superior -->
             <div id="top-bar">
-                <div class="bandeira-brasil">
+                <!--bandeira e texto da bandeira-->
+                <div class="container-bandeira-brasil">
+                  <div class="bandeira-brasil">
+                      <ul id="lista-bandeira-brasil">
+                          <li><img src="images/1200px-Flag_of_Brazil.svg.png" alt="bandeira-brasil"></li>
+                          <li id="bandeira-brasil-texto"><b>BRASIL</b></li>
+                      </ul>
+                  </div>
+                </div>
+                <!--Fim da bandeira e do texto da bandeira -->
+                <div class="container-menu">
+                  <div class="menu">
                     <ul>
-                        <li><img src="images/1200px-Flag_of_Brazil.svg.png" alt="bandeira-brasil"></li>
-                        <li><b>BRASIL</b></li>
+                      <li id="coronavirus">CORONAVÍRUS (COVID-19)</li>
+                      <li>Simplifique!</li>
+                      <li>Participe</li>
+                      <li>Acesso à informação</li>
+                      <li>Legislação</li>
+                      <li>Canais</li>
+                      <li><img src="images/Símbolos de Acessibilidade_ Libras.png" alt="Libras"></li>
                     </ul>
+
+                  </div>
                 </div>
              </div>
         </header>
+        <img src="images/remy-gieling-bIrzvkPGw2c-unsplash.jpg" width="100%" alt="">
         <nav>
             <ul>
                 <li><a href="html/hobbies.html">Hobbies</a></li>
