terminei o header falta apenas corrigir e otimizar o css

--- a/index.html
+++ b/index.html
@@ -22,23 +22,47 @@
                   </div>
                 </div>
                 <!--Fim da bandeira e do texto da bandeira -->
+                
+                <!--Inicio das opções do menu da top bar-->
                 <div class="container-menu">
-                  <div class="menu">
-                    <ul>
-                      <li id="coronavirus">CORONAVÍRUS (COVID-19)</li>
-                      <li>Simplifique!</li>
-                      <li>Participe</li>
-                      <li>Acesso à informação</li>
-                      <li>Legislação</li>
-                      <li>Canais</li>
-                      <li><img src="images/Símbolos de Acessibilidade_ Libras.png" alt="Libras"></li>
-                    </ul>
-
-                  </div>
+                    <div class="menu">
+                        <ul>
+                            <li id="coronavirus">CORONAVÍRUS (COVID-19)</li>
+                            <li>Simplifique!</li>
+                            <li>Participe</li>
+                            <li>Acesso à informação</li>
+                            <li>Legislação</li>
+                            <li>Canais</li>
+                            <li><img src="images/Símbolos de Acessibilidade_ Libras.png" alt="Libras"></li>
+                        </ul>
+                    </div>
                 </div>
-             </div>
+            </div>
+                <!--Fim das opções do menu e da top bar-->
+
+            <!--Inicio da logo do site-->
+            <div class="logo">
+                <ul>
+                    <li><sub>Instituto Federal de Mato Grosso do Sul</sub></li>
+                    <br>
+                    <li><span id="header-logo">Sistema Acadêmico</span></li>
+
+                </ul>
+            </div>
+            <!--Fim da logo do site-->
+            <!--Inicio do nav do header-->
+            <div class="wrapper-nav-header">
+                <nav id="selecionador-matrícula">
+                    <form action="#" id="form-selecionado-matricula">
+                        <select class="opcoes-selecionador" name="opcaoDeMatricula" id="seletor-de-matricula">
+                            <option value="tecnico_integrado">Técnico em Informática - Integrado (Em curso)</option>
+                            <option value="selecione_uma_matricula">Selecione uma matrícula</option>
+                        </select>
+                    </form>
+                </nav>
+            </div>
+            <!--Fim do nav do header-->
         </header>
-        <img src="images/remy-gieling-bIrzvkPGw2c-unsplash.jpg" width="100%" alt="">
         <nav>
             <ul>
                 <li><a href="html/hobbies.html">Hobbies</a></li>
