muitas modificacoes foram feitas mas ainda e necessarias otimizacoes

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             <li>Acesso à informação</li>
                             <li>Legislação</li>
                             <li>Canais</li>
-                            <li><img src="images/Símbolos de Acessibilidade_ Libras.png" alt="Libras"></li>
+                            <li><img src="images/simbolos_de_Acessibilidade_Libras.png" alt="Libras"></li>
                         </ul>
                     </div>
                 </div>
@@ -44,7 +44,6 @@
             <div class="logo">
                 <ul>
                     <li><sub>Instituto Federal de Mato Grosso do Sul</sub></li>
-                    <br>
                     <li><span id="header-logo">Sistema Acadêmico</span></li>
 
                 </ul>
