erros a serem corrigidos

--- a/index.html
+++ b/index.html
@@ -11,54 +11,57 @@
     <body>
         <header>
           <!-- Inicio da barra superior -->
-            <div id="top-bar">
-                <!--bandeira e texto da bandeira-->
-                <div class="container-bandeira-brasil">
-                  <div class="bandeira-brasil">
-                      <ul id="lista-bandeira-brasil">
-                          <li><img src="images/1200px-Flag_of_Brazil.svg.png" alt="bandeira-brasil"></li>
-                          <li id="bandeira-brasil-texto"><b>BRASIL</b></li>
-                      </ul>
-                  </div>
-                </div>
-                <!--Fim da bandeira e do texto da bandeira -->
-                
-                <!--Inicio das opções do menu da top bar-->
-                <div class="container-menu">
-                    <div class="menu">
-                        <ul>
-                            <li id="coronavirus">CORONAVÍRUS (COVID-19)</li>
-                            <li>Simplifique!</li>
-                            <li>Participe</li>
-                            <li>Acesso à informação</li>
-                            <li>Legislação</li>
-                            <li>Canais</li>
-                            <li><img src="images/simbolos_de_Acessibilidade_Libras.png" alt="Libras"></li>
-                        </ul>
+<div id="top-bar">
+
+                    <!--bandeira e texto da bandeira-->
+                    <div class="bandeira-lista-brasil">
+                        <div class="imagem-lista-brasil">
+                            <img src="images/1200px-Flag_of_Brazil.svg.png" alt="bandeira-brasil">
+                        </div>
+                        <div>
+                            <ul>
+                                <li>BRASIL</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <!--Fim da bandeira e do texto da bandeira -->
+                    
+                    <!--Inicio das opções do menu da top bar-->
+                    <div class="container-menu">
+                        <div class="menu">
+                            <ul>
+                                <li id="coronavirus">CORONAVÍRUS (COVID-19)</li>
+                                <li>Simplifique!</li>
+                                <li>Participe</li>
+                                <li>Acesso à informação</li>
+                                <li>Legislação</li>
+                                <li>Canais</li>
+                                <li><img src="images/simbolos_de_Acessibilidade_Libras.png" alt="Libras"></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
-            </div>
-                <!--Fim das opções do menu e da top bar-->
+                    <!--Fim das opções do menu e da top bar-->
 
-            <!--Inicio da logo do site-->
-            <div class="logo">
-                <ul>
-                    <li><sub>Instituto Federal de Mato Grosso do Sul</sub></li>
-                    <li><span id="header-logo">Sistema Acadêmico</span></li>
+                <!--Inicio da logo do site-->
+                <div class="logo">
+                    <ul>
+                        <li><sub>Instituto Federal de Mato Grosso do Sul</sub></li>
+                        <li><span id="header-logo">Sistema Acadêmico</span></li>
 
-                </ul>
-            </div>
-            <!--Fim da logo do site-->
-            <!--Inicio do nav do header-->
-            <div class="wrapper-nav-header">
-                <nav id="selecionador-matrícula">
-                    <form action="#" id="form-selecionado-matricula">
-                        <select class="opcoes-selecionador" name="opcaoDeMatricula" id="seletor-de-matricula">
-                            <option value="tecnico_integrado">Técnico em Informática - Integrado (Em curso)</option>
-                            <option value="selecione_uma_matricula">Selecione uma matrícula</option>
-                        </select>
-                    </form>
-                </nav>
+                    </ul>
+                </div>
+                <!--Fim da logo do site-->
+                <!--Inicio do nav do header-->
+                <div class="wrapper-nav-header">
+                    <nav id="selecionador-matrícula">
+                        <form action="#" id="form-selecionado-matricula">
+                            <select class="opcoes-selecionador" name="opcaoDeMatricula" id="seletor-de-matricula">
+                                <option value="tecnico_integrado">Técnico em Informática - Integrado (Em curso)</option>
+                                <option value="selecione_uma_matricula">Selecione uma matrícula</option>
+                            </select>
+                        </form>
+                    </nav>
             </div>
             <!--Fim do nav do header-->
         </header>
