--- a/index.html
+++ b/index.html
@@ -15,14 +15,10 @@
 
                     <!--bandeira e texto da bandeira-->
                     <div class="bandeira-lista-brasil">
-                        <div class="imagem-lista-brasil">
-                            <img src="images/1200px-Flag_of_Brazil.svg.png" alt="bandeira-brasil">
-                        </div>
-                        <div>
-                            <ul>
+                            <img src="images/1200px-Flag_of_Brazil.svg.png" id="bandeira-brasil" alt="bandeira-brasil">
+                            <ul id="lista-bandeira-brasil">
                                 <li>BRASIL</li>
                             </ul>
-                        </div>
                     </div>
                     <!--Fim da bandeira e do texto da bandeira -->
                     
