--- a/index.html
+++ b/index.html
@@ -78,5 +78,10 @@
                 </div>                    
             </div>
         </main>
+        <footer>
+            <div class="barra-footer">
+            </div>
+            
+        </footer>
     </body>
 </html>
