bottom bar finalizada, faltando apenas organizar as paginas e fazer as devidas otimizacoes

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="css/index.css">
     </head>
     <body>
+        <!-- Incio do header -->
         <header>
             <!-- Inicio da barra superior -->
             <div id="top-bar">
@@ -58,6 +59,7 @@
             </div>
             <!--Fim do nav do header-->
         </header>
+        <!-- Incio da main -->
         <main>
             <!--Inicio da barra lateral do site-->
             <div class="container-main">
@@ -94,7 +96,7 @@
                             cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
                             proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                             <p>links:</p>
-                            <a class="link-paragrafo" href="https://depressao.com.br/">Este é um link</a>
+                            <a class="link-paragrafo" href="https://facebook.com">Este é um link</a>
                         </div>
                      </div>
                 </div> 
@@ -113,23 +115,30 @@
                             cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
                             proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                             <p>links:</p>
-                            <a class="link-paragrafo" href="https://depressao.com.br/">Este é um link</a>
+                            <a class="link-paragrafo" href="https://facebook.com">Este é um link</a>
                         </div>
                      </div>
                 </div>
                 <!-- Fim da main do site-->    
             </div>
         </main>
+
         <!-- Incio do footer -->
         <footer>
             <div class="texto-footer">
-                
+                <p><sup>Caso ocorra alguma inconsistência favor procurar a Central de Relacionamento (CEREL) do seu campus.</sup></p>
             </div>  
-
             <div class="wrapper-barra-rodape">
-                <div class="barra-rodape">
-                    
-                </div>
+                <a id="link-bottom-bar" href="http://www.acessoainformacao.gov.br/" target="_blank">
+                    <div class="wrapper-acessibilidade-imagem">
+                        <img src="images/info_ico.png" alt="simbolo de acesso a informação" id="acessoainformacao">
+                        <p id="texto-acessibilidade">Acesso à<br>informação</p>
+                    </div>
+                </a>
+                <a href="http://www.brasil.gov.br/" target="_blank">
+                    <div class="wrapper-patria-imagem">
+                    </div>
+                </a>
             </div>
         </footer>
     </body>
